[tool.poetry]
name = "causal_reasoning"
version = "0.1.0"
description = "Package for causal inference under partially observability"
authors = ["danlawand <daniel.lawand@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.15.2"
networkx = "^3.4.2"
gurobipy = "^12.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
